Bug 244176 - [JSC] Not generating import.meta object if it is not referenced
Summary: [JSC] Not generating import.meta object if it is not referenced
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-21 19:08 PDT by Yusuke Suzuki
Modified: 2022-08-21 22:40 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2022-08-21 19:08:37 PDT
...
Comment 1 Yusuke Suzuki 2022-08-21 19:13:56 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3519
Comment 2 EWS 2022-08-21 22:39:48 PDT
Committed 253636@main (1e07f486b4a0): <https://commits.webkit.org/253636@main>

Reviewed commits have been landed. Closing PR #3519 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-08-21 22:40:20 PDT
<rdar://problem/98961151>